list_remove_if going on

--- a/tester_bvalette/Makefile
+++ b/tester_bvalette/Makefile
@@ -20,6 +20,7 @@ CFLAGS = -Werror
 CFLAGS += -Wextra
 CFLAGS += -Wall
 CFLAGS += -g
+# CFLAGS += -fsanitize=address
 
 ifeq ($(DEBUG), 1)
  CFLAGS += -fsanitize=address
